Fixed Image not displaying behind circle issue

--- a/src/components/UserDetailsForm.module.css
+++ b/src/components/UserDetailsForm.module.css
@@ -31,23 +31,43 @@
     align-items: center;
 }
 
+.circleCrop {
+    width: 200px;
+    /* Set this to your desired width */
+    height: 200px;
+    /* Ensure this is the same as width to get a circle */
+    overflow: hidden;
+    border-radius: 50%;
+    /* This makes it circular */
+}
+
+
+.circleCrop::before {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
 
 .image-cropper-container {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     overflow: hidden;
-    background-color: #e0e0e0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    /* Adds space between image and upload button */
+    position: relative;
+    border: 1px solid #ddd;
+    /* Optional: Add a border for visual distinction */
 }
 
 .image-placeholder {
-    text-align: center;
-    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    /* Optional: Background color for placeholder */
+    font-size: 16px;
+    /* Adjust font-size as needed */
 }
 
 .upload-button {
@@ -105,6 +125,23 @@
     height: 32px;
     margin-right: 10px;
 }
+
+
+.reelIconContainer {
+    position: absolute;
+    top: 10px;
+    /* Adjust as needed for top spacing */
+    left: 10px;
+    /* Adjust as needed for left spacing */
+    /* border: 2px solid #000; */
+    /* Add a border, adjust color and thickness as desired */
+    padding: 5px;
+    /* Adjust as needed for space between border and image */
+    border-radius: 5px;
+    /* Optional: For rounded corners */
+}
+
+
 
 .reelIcon {
     width: 80px;
